<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background= "@color/background"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/LoginPageTopMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LoginPageMessage"
        android:textStyle="bold"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.439" />

    <EditText
        android:paddingLeft="5dp"
        android:id="@+id/EditEmailText"
        android:layout_width="222dp"
        android:layout_height="33dp"
        android:background="@drawable/et_style"
        android:ems="10"
        android:hint="@string/EmailHint"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginPageTopMessage"
        app:layout_constraintVertical_bias="0.104" />

    <EditText
        android:paddingLeft="5dp"
        android:id="@+id/EditPasswordText"
        android:layout_width="223dp"
        android:layout_height="31dp"
        android:layout_marginBottom="260dp"
        android:background="@drawable/et_style"
        android:ems="10"
        android:hint="@string/PasswordHint"
        android:inputType="textPassword"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditEmailText" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LoginButtonName"
        android:textColor="@color/colorText"
        android:background="@color/colorButtons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditPasswordText"
        app:layout_constraintVertical_bias="0.143" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorButtons"
        android:text="@string/RegisterButton"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditPasswordText"
        app:layout_constraintVertical_bias="0.504" />

    <TextView
        android:id="@+id/ErrorLoginMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/ErrorLoginPageMessage"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/EditEmailText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/LoginPageTopMessage"
        app:layout_constraintVertical_bias="0.153" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:src="@drawable/healthsamurailogo"
        app:layout_constraintBottom_toTopOf="@+id/LoginPageTopMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.483" />
</androidx.constraintlayout.widget.ConstraintLayout>